--- a/Taylr/AVKit/Base.lproj/AVKit.storyboard
+++ b/Taylr/AVKit/Base.lproj/AVKit.storyboard
@@ -2,7 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="B5O-Nb-tlk">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="TransatTextStandard.otf">
@@ -107,6 +109,10 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-jQ-Kok" customClass="SCVideoPlayerView">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="kRf-nd-wGw" appends="YES" id="XvQ-4p-HYO"/>
+                                </connections>
                             </view>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="DQV-th-jma">
                                 <rect key="frame" x="559" y="62" width="30" height="2"/>
@@ -116,45 +122,15 @@
                                 <color key="progressTintColor" red="0.61960784310000006" green="0.4941176471" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="trackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </progressView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5p3-YQ-26h" userLabel="Rewind">
-                                <rect key="frame" x="0.0" y="270" width="80" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="SJy-8Q-wmn"/>
-                                    <constraint firstAttribute="width" constant="80" id="fVf-c0-Bnl"/>
-                                </constraints>
-                                <state key="normal" image="ic-rewind">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapRewind:" destination="rTJ-l0-lHc" eventType="touchUpInside" id="JU2-GH-Nwk"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgu-FP-Yqj" userLabel="Play / Pause">
-                                <rect key="frame" x="260" y="270" width="80" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Kn8-8d-8Dk"/>
-                                    <constraint firstAttribute="width" constant="80" id="rn1-j4-FHF"/>
-                                </constraints>
-                                <state key="normal" image="ic-play">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapPlayOrPause:" destination="rTJ-l0-lHc" eventType="touchUpInside" id="Cht-Ui-oyb"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3mk-p7-037" userLabel="Skip">
-                                <rect key="frame" x="520" y="270" width="80" height="80"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="XQW-QR-jns"/>
-                                    <constraint firstAttribute="width" constant="80" id="Y5P-dB-RKB"/>
-                                </constraints>
-                                <state key="normal" image="ic-skip">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="didTapSkip:" destination="rTJ-l0-lHc" eventType="touchUpInside" id="6Ac-W1-CyD"/>
-                                </connections>
-                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-rewind" translatesAutoresizingMaskIntoConstraints="NO" id="9Xy-Ea-CDc">
+                                <rect key="frame" x="24" y="298" width="21" height="24"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-play" translatesAutoresizingMaskIntoConstraints="NO" id="IoN-et-h84">
+                                <rect key="frame" x="288" y="298" width="24" height="24"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-skip" translatesAutoresizingMaskIntoConstraints="NO" id="Rmb-Kd-zDt">
+                                <rect key="frame" x="555" y="298" width="21" height="24"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="b6o-4m-xPz">
                                 <rect key="frame" x="8" y="542" width="50" height="50"/>
                                 <constraints>
@@ -182,38 +158,45 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="DQV-th-jma" firstAttribute="top" secondItem="AmD-xc-WPD" secondAttribute="bottom" constant="4" id="2VK-43-DBd"/>
-                            <constraint firstItem="RFF-jQ-Kok" firstAttribute="trailing" secondItem="3mk-p7-037" secondAttribute="trailing" id="2mH-TL-07f"/>
+                            <constraint firstItem="9Xy-Ea-CDc" firstAttribute="leading" secondItem="RFF-jQ-Kok" secondAttribute="leadingMargin" constant="16" id="8Or-Tk-vec"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="leading" secondItem="Mky-an-EVL" secondAttribute="leading" id="8xx-xQ-7YE"/>
                             <constraint firstItem="CMP-Tk-LYc" firstAttribute="top" secondItem="RFF-jQ-Kok" secondAttribute="bottom" id="IHV-ad-GP7"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="bottom" secondItem="b6o-4m-xPz" secondAttribute="bottom" constant="8" id="NJd-pE-CQz"/>
-                            <constraint firstItem="RFF-jQ-Kok" firstAttribute="centerX" secondItem="wgu-FP-Yqj" secondAttribute="centerX" id="U4f-Nd-RhU"/>
+                            <constraint firstItem="RFF-jQ-Kok" firstAttribute="trailingMargin" secondItem="Rmb-Kd-zDt" secondAttribute="trailing" constant="16" id="Qv5-XV-04v"/>
+                            <constraint firstItem="IoN-et-h84" firstAttribute="centerX" secondItem="RFF-jQ-Kok" secondAttribute="centerX" id="RnT-da-sxq"/>
+                            <constraint firstItem="9Xy-Ea-CDc" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="amw-4B-UTy"/>
                             <constraint firstItem="jf7-ly-dLo" firstAttribute="centerY" secondItem="b6o-4m-xPz" secondAttribute="centerY" id="boL-9U-AN5"/>
                             <constraint firstItem="DQV-th-jma" firstAttribute="centerX" secondItem="AmD-xc-WPD" secondAttribute="centerX" id="cOx-IP-HNW"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="top" secondItem="3ra-S8-UUG" secondAttribute="bottom" id="cmo-Hs-usD"/>
-                            <constraint firstItem="RFF-jQ-Kok" firstAttribute="centerY" secondItem="wgu-FP-Yqj" secondAttribute="centerY" id="dcb-ol-uzG"/>
+                            <constraint firstItem="Rmb-Kd-zDt" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="gUd-gf-Ju4"/>
                             <constraint firstAttribute="trailing" secondItem="RFF-jQ-Kok" secondAttribute="trailing" id="kDa-4V-ANo"/>
-                            <constraint firstItem="5p3-YQ-26h" firstAttribute="leading" secondItem="RFF-jQ-Kok" secondAttribute="leading" id="kdR-yx-NgN"/>
-                            <constraint firstItem="RFF-jQ-Kok" firstAttribute="centerY" secondItem="3mk-p7-037" secondAttribute="centerY" id="rOQ-Bi-ZjA"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="trailing" secondItem="AmD-xc-WPD" secondAttribute="trailing" constant="16" id="rRn-5M-iMm"/>
                             <constraint firstItem="jf7-ly-dLo" firstAttribute="leading" secondItem="b6o-4m-xPz" secondAttribute="trailing" constant="8" symbolic="YES" id="rvC-kR-I7f"/>
                             <constraint firstItem="b6o-4m-xPz" firstAttribute="leading" secondItem="RFF-jQ-Kok" secondAttribute="leading" constant="8" id="uY1-Z3-uUv"/>
+                            <constraint firstItem="IoN-et-h84" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="yXf-hP-I8E"/>
                             <constraint firstItem="AmD-xc-WPD" firstAttribute="top" secondItem="RFF-jQ-Kok" secondAttribute="top" constant="16" id="ykS-bn-qy5"/>
-                            <constraint firstItem="5p3-YQ-26h" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="yuS-97-HCd"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="avatarView" destination="b6o-4m-xPz" id="C2e-hg-XF3"/>
                         <outlet property="durationLabel" destination="AmD-xc-WPD" id="In6-ZL-nxf"/>
-                        <outlet property="playPauseButton" destination="wgu-FP-Yqj" id="8zs-Co-0nm"/>
+                        <outlet property="playPauseImage" destination="IoN-et-h84" id="vZn-ZK-79D"/>
                         <outlet property="playerView" destination="RFF-jQ-Kok" id="dDw-6V-kYh"/>
                         <outlet property="progressView" destination="DQV-th-jma" id="aYH-i8-MVg"/>
+                        <outlet property="rewindImage" destination="9Xy-Ea-CDc" id="f2E-Py-ldZ"/>
+                        <outlet property="skipImage" destination="Rmb-Kd-zDt" id="o3Q-ps-ae0"/>
                         <outlet property="timestampLabel" destination="jf7-ly-dLo" id="5Ma-rK-hPj"/>
-                        <outletCollection property="playbackControls" destination="5p3-YQ-26h" collectionClass="NSMutableArray" id="Cyr-uq-XSR"/>
-                        <outletCollection property="playbackControls" destination="wgu-FP-Yqj" collectionClass="NSMutableArray" id="9V9-Bw-N1d"/>
-                        <outletCollection property="playbackControls" destination="3mk-p7-037" collectionClass="NSMutableArray" id="nna-nM-nJ6"/>
+                        <outletCollection property="playbackControls" destination="9Xy-Ea-CDc" collectionClass="NSMutableArray" id="qzR-sg-i4e"/>
+                        <outletCollection property="playbackControls" destination="IoN-et-h84" collectionClass="NSMutableArray" id="9ZI-Hn-zWN"/>
+                        <outletCollection property="playbackControls" destination="Rmb-Kd-zDt" collectionClass="NSMutableArray" id="ZYU-W8-NX7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uFR-IP-tYk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="kRf-nd-wGw">
+                    <connections>
+                        <action selector="didPanOnPlayer:" destination="rTJ-l0-lHc" id="wIm-1I-CmN"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-316" y="413"/>
         </scene>
