--- a/Taylr/AVKit/Base.lproj/AVKit.storyboard
+++ b/Taylr/AVKit/Base.lproj/AVKit.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -131,15 +130,8 @@
                             <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-skip" translatesAutoresizingMaskIntoConstraints="NO" id="Rmb-Kd-zDt">
                                 <rect key="frame" x="555" y="298" width="21" height="24"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="b6o-4m-xPz">
-                                <rect key="frame" x="8" y="542" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="b6o-4m-xPz" secondAttribute="height" multiplier="1:1" id="M9I-TY-Lcs"/>
-                                    <constraint firstAttribute="width" constant="50" id="xra-c4-LeE"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10m" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jf7-ly-dLo">
-                                <rect key="frame" x="66" y="558" width="31" height="18"/>
+                                <rect key="frame" x="20" y="562" width="31" height="18"/>
                                 <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -158,27 +150,24 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="DQV-th-jma" firstAttribute="top" secondItem="AmD-xc-WPD" secondAttribute="bottom" constant="4" id="2VK-43-DBd"/>
+                            <constraint firstItem="jf7-ly-dLo" firstAttribute="bottom" secondItem="RFF-jQ-Kok" secondAttribute="bottom" constant="-20" id="5lT-yN-i9G"/>
                             <constraint firstItem="9Xy-Ea-CDc" firstAttribute="leading" secondItem="RFF-jQ-Kok" secondAttribute="leadingMargin" constant="16" id="8Or-Tk-vec"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="leading" secondItem="Mky-an-EVL" secondAttribute="leading" id="8xx-xQ-7YE"/>
                             <constraint firstItem="CMP-Tk-LYc" firstAttribute="top" secondItem="RFF-jQ-Kok" secondAttribute="bottom" id="IHV-ad-GP7"/>
-                            <constraint firstItem="RFF-jQ-Kok" firstAttribute="bottom" secondItem="b6o-4m-xPz" secondAttribute="bottom" constant="8" id="NJd-pE-CQz"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="trailingMargin" secondItem="Rmb-Kd-zDt" secondAttribute="trailing" constant="16" id="Qv5-XV-04v"/>
                             <constraint firstItem="IoN-et-h84" firstAttribute="centerX" secondItem="RFF-jQ-Kok" secondAttribute="centerX" id="RnT-da-sxq"/>
                             <constraint firstItem="9Xy-Ea-CDc" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="amw-4B-UTy"/>
-                            <constraint firstItem="jf7-ly-dLo" firstAttribute="centerY" secondItem="b6o-4m-xPz" secondAttribute="centerY" id="boL-9U-AN5"/>
+                            <constraint firstItem="jf7-ly-dLo" firstAttribute="leading" secondItem="RFF-jQ-Kok" secondAttribute="leading" constant="20" id="boW-SM-HY3"/>
                             <constraint firstItem="DQV-th-jma" firstAttribute="centerX" secondItem="AmD-xc-WPD" secondAttribute="centerX" id="cOx-IP-HNW"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="top" secondItem="3ra-S8-UUG" secondAttribute="bottom" id="cmo-Hs-usD"/>
                             <constraint firstItem="Rmb-Kd-zDt" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="gUd-gf-Ju4"/>
                             <constraint firstAttribute="trailing" secondItem="RFF-jQ-Kok" secondAttribute="trailing" id="kDa-4V-ANo"/>
                             <constraint firstItem="RFF-jQ-Kok" firstAttribute="trailing" secondItem="AmD-xc-WPD" secondAttribute="trailing" constant="16" id="rRn-5M-iMm"/>
-                            <constraint firstItem="jf7-ly-dLo" firstAttribute="leading" secondItem="b6o-4m-xPz" secondAttribute="trailing" constant="8" symbolic="YES" id="rvC-kR-I7f"/>
-                            <constraint firstItem="b6o-4m-xPz" firstAttribute="leading" secondItem="RFF-jQ-Kok" secondAttribute="leading" constant="8" id="uY1-Z3-uUv"/>
                             <constraint firstItem="IoN-et-h84" firstAttribute="centerY" secondItem="RFF-jQ-Kok" secondAttribute="centerY" id="yXf-hP-I8E"/>
                             <constraint firstItem="AmD-xc-WPD" firstAttribute="top" secondItem="RFF-jQ-Kok" secondAttribute="top" constant="16" id="ykS-bn-qy5"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="avatarView" destination="b6o-4m-xPz" id="C2e-hg-XF3"/>
                         <outlet property="durationLabel" destination="AmD-xc-WPD" id="In6-ZL-nxf"/>
                         <outlet property="playPauseImage" destination="IoN-et-h84" id="vZn-ZK-79D"/>
                         <outlet property="playerView" destination="RFF-jQ-Kok" id="dDw-6V-kYh"/>
@@ -280,6 +269,5 @@
         <image name="ic-rewind" width="21" height="24"/>
         <image name="ic-save" width="38" height="39"/>
         <image name="ic-skip" width="21" height="24"/>
-        <image name="sample-taylor-avatar" width="66" height="67"/>
     </resources>
 </document>
